----- cvs ci ------
Sun Sep 03 19:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* ReplyTo/Reply1st/ReplyNext support ("hpt link" links jam areas now)

----- cvs ci ------
Tue Aug 29 22:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* great JAM bugfix! (ex: netmail looks good after packing)

----- cvs ci ------
Mon Aug 28 12:46:58 UTC 2000
sms:
* fixed segfault if area could not be opened

----- cvs ci ------
Thu Aug 24 13:54:51 UTC 2000
sms:
* fixed return value of _sqlock

----- cvs ci ------
Thu Aug 24 13:18:35 UTC 2000
sms:
* renamed exported Squish*-functions to apiSquish* to prevent name collisions
  (e.g. in MsgEd)

----- cvs ci ------
Thu Aug 24 12:39:45 UTC 2000
sms:
* added missing _SquishInit call in MsgOpenApi

----- cvs ci ------
Thu Aug 24 12:15:35 UTC 2000
sms:
* init semaphores for squish routines in MsgOpenApi, destroy them in 
  MsgCloseApi

----- cvs ci ------
Sun Aug 20 10:00:00 CET 2000
oliver grimm ():
* fix problems compiling smapi on 'newer' linux-systems
* add -DHAS_SEMUN in huskymak.cfg for older systems, witch has "union semun"
* fix broken SquishDeleteBase()

----- cvs ci ------
Sun Aug 13 21:25:00 CET 2000
oliver grimm ():
* remove api_sq.* (MSGAPI 0)
* add sq_*.* (MSGAPI 2)
* add function GetHash()
* add function GetNextUid()
* tested under BeOS
* compiled under linux & BeOS
*******************************************
* COMPLETE REFRESH OF THE SQUISH-CODE           *
* COULD BE UNSTABLE                                              *
*******************************************

----- cvs ci ------
Sun Aug 13 10:18:23 CET 2000
oliver grimm ():
* found locking Bug
* added open-area list (squish only))
* added open-message list for each area (squish only)
* when closing an squish-area all messages will be closed 
* MsgCloseApi() closes all open squish-areas
* simple multithreading support added

smapi 1.6.4
-----------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Mon Jul 31 12:18:23 NOVST 2000