@@ -123,6 +123,7 @@ install: instdyn
 	$(INSTALL) $(IIOPT) stamp.h $(INCDIR)/smapi
 	$(INSTALL) $(IIOPT) typedefs.h $(INCDIR)/smapi
 	$(INSTALL) $(IIOPT) unused.h $(INCDIR)/smapi
+	$(INSTALL) $(IIOPT) semaphor.h $(INCDIR)/smapi
 	$(INSTALL) $(ILOPT) $(TARGET) $(LIBDIR)
 	$(INSTALL) $(ILOPT) patmat$(OBJ) $(LIBDIR)
 
